# hinty

./: .gitignore  Cargo.toml  README.md  as-asm.sh  benchmark_results.csv  benchmark_results.html  gen_data.sh  plot_mac_results.py  results_summary.csv  run_mac.sh  run_perf.sh
.cargo/: config.toml
benches/: all.rs  runner.rs
bins/: baseline.rs  generate.rs  likely.rs  run.rs  unlikely.rs
hyperfine_results/: baseline_10-90_unlikely.json  baseline_50-50.json  baseline_90-10_likely.json  likely_10-90_unlikely.json  likely_50-50.json  likely_90-10_likely.json  unlikely_10-90_unlikely.json  unlikely_50-50.json  unlikely_90-10_likely.json
src/: lib.rs  notes.md
