[package]
name = "hinty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"

[lib]
name = "hinty"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "bins/generate.rs"

[[bin]]
name = "run"
path = "bins/run.rs"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
