[package]
name = "hinty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
rand = "0.9.1"

[lib]
name = "hinty"
path = "src/lib.rs"

[[bin]]
name = "baseline"
path = "bins/baseline.rs"

[[bin]]
name = "likely"
path = "bins/likely.rs"

[[bin]]
name = "unlikely"
path = "bins/unlikely.rs"


[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "all"
path = "benches/runner.rs"
harness = false
